--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,8 +10,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        lfs: true
     - uses: actions/setup-node@v2
 
     - name: Install parcel
@@ -20,7 +18,8 @@ jobs:
 
     - name: Build site
       run: |
-        parcel build index.pug
+        npm install
+        parcel build index.pug --no-optimise
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@3.7.1
