--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build site
       run: |
         npm install
-        parcel build index.pug --no-optimise
+        parcel build index.pug --no-optimize
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@3.7.1
