--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "devDependencies": {
+    "@parcel/transformer-less": "^2.0.0-beta.2",
+    "@parcel/transformer-pug": "^2.0.0-beta.2",
     "cssnano": "^4.1.10",
-    "front-matter": "^2.3.0",
-    "handlebars": "^4.7.7",
-    "handlebars-helpers": "^0.10.0",
-    "handlebars-layouts": "^3.1.4",
-    "handlebars-wax": "^6.1.0",
     "less": "^4.0.0",
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-handlebars": "^0.4.4",
     "pug": "^3.0.0"
+  },
+  "dependencies": {
+    "parcel-plugin-handlebars": "^0.4.4"
   }
 }
