--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,14 +12,14 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
 
-    - name: Install parcel
-      run: |
-        sudo npm install -g parcel
+    #- name: Install parcel
+    #  run: |
+    #    sudo npm install -g parcel
 
     - name: Build site
       run: |
         npm install
-        parcel build index.pug --no-optimize
+        npx parcel build index.pug --no-optimize
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@3.7.1
