Test with node v12.

--- a/package.json
+++ b/package.json
@@ -10,5 +10,7 @@
     "parcel-resolver-ignore": "^1.0.1",
     "pug": "^3.0.0"
   },
-  "parcelIgnore": ["playground.html"]
+  "parcelIgnore": [
+    "playground.html"
+  ]
 }
