--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
+      with:
+        node-version: '12'
 
     #- name: Install parcel
     #  run: |
@@ -19,6 +21,9 @@ jobs:
     - name: Build site
       run: |
         npm install
+        npm --version
+        node --version
+        npx parcel --version
         npx parcel build index.pug --no-optimize
 
     - name: Deploy 🚀
